// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`revert_code should serialize properly 1`] = `
{
  "data": [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`revert_code should serialize properly 2`] = `
{
  "data": [
    0,
  ],
  "type": "Buffer",
}
`;

exports[`revert_code should serialize properly 3`] = `
Fr {
  "asBigInt": 0n,
  "asBuffer": {
    "data": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "type": "Buffer",
  },
}
`;

exports[`revert_code should serialize properly 4`] = `
{
  "data": [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
  ],
  "type": "Buffer",
}
`;

exports[`revert_code should serialize properly 5`] = `
{
  "data": [
    1,
  ],
  "type": "Buffer",
}
`;

exports[`revert_code should serialize properly 6`] = `
Fr {
  "asBigInt": 1n,
  "asBuffer": {
    "data": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      1,
    ],
    "type": "Buffer",
  },
}
`;
